<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imv_back"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:padding="16dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/text_bold_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp"
            android:text="@string/setting"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="@id/imv_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/imv_back" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:background="@drawable/rounded_dialog"
            android:padding="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imv_back">

            <RelativeLayout
                android:id="@+id/rlt_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/_12sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imv_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_language" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/text_regular_12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_toEndOf="@id/imv_language"
                    android:text="@string/language"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlt_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rlt_language"
                android:paddingVertical="@dimen/_12sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imv_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_rate" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/text_regular_12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_toEndOf="@id/imv_rate"
                    android:text="@string/rate"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlt_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rlt_rate"
                android:paddingVertical="@dimen/_12sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imv_feedback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_feedback" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/text_regular_12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_toEndOf="@id/imv_feedback"
                    android:text="@string/feedback"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlt_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rlt_feedback"
                android:paddingVertical="@dimen/_12sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imv_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_share" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/text_regular_12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_toEndOf="@id/imv_share"
                    android:text="@string/share_with_friend"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlt_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rlt_share"
                android:paddingVertical="@dimen/_12sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imv_policy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_policy" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_toEndOf="@id/imv_policy"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />
            </RelativeLayout>

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
